ec2.tf
resource "aws_instance" "web" {
  ami           = "ami-00b0a08d4568c22e8"
  instance_type = var.instance_type

  subnet_id = aws_subnet.public.id

  vpc_security_group_ids = [
    aws_security_group.ec2.id
  ]

  associate_public_ip_address = true

  tags = {
    Name = "terraform-web-server"
  }
}
